# eq102

./: .cproject  .project  CMakeLists.txt  README.md
eq102/: README.md
objetos/: case 1.cpp  ccursos.txt  functions.cpp  logs.txt  main.cpp  matriculas.txt  objects.h  open.txt
objetos/admin/: admin.cc  admin.h
objetos/c_cursos/: c_cursos.cpp  c_cursos.h
objetos/participante/: participante.cpp  participante.h
objetos/usuario/: logs.txt  usuario.cc  usuario.cpp  usuario.h
objetos/visitante/: logs.txt  visitante.cpp  visitante.h
src/: CMakeLists.txt  functions.cpp  logs.txt  matriculas.txt  objects.h  open.txt  tests.cpp
src/c_cursos/: c_cursos.h
src/participante/: participante.cpp  participante.h
src/programa/: CMakeLists.txt  functions.cpp  logs.txt  main.cpp  matriculas.txt  objects.h  open.txt
src/usuario/: usuario.cpp  usuario.h  usuario_main.cpp
src/visitante/: visitante_main.cpp
tests/: CMakeLists.txt  tests.cpp
